# design_patterns

./: Dockerfile  docker-compose.yaml  log.txt  main.py  pyproject.toml  swagger.yaml
data/: load_test_for_turnovers.md  recipe1.md  recipe2.md  repository.json  requests.bat  settings.json
src/abstract_models/: abstract_logic.py  abstract_process.py  abstract_prototype.py  abstract_reference.py  abstract_report.py
src/data/: settings.json
src/dto/: filter.py  filter_logic.py  filter_type.py  transaction_filter.py
src/logger/: log.py  log_type.py  logger.py
src/logics/: domain_prototype.py  transaction_prototype.py
src/models/: ingredient_model.py  measurement_model.py  nomenclature_group_model.py  nomenclature_model.py  organization_model.py  process_model.py  recipe_model.py  settings_model.py  transaction_type.py  warehouse_model.py  warehouse_transaction_model.py  warehouse_turnover_model.py
src/process/: process_factory.py  warehouse_blocked_turnover_process.py  warehouse_turnover_process.py
src/reports/: csv_report.py  json_report.py  markdown_report.py  report_factory.py  rtf_report.py  tbs_report.py  xml_report.py
src/settings/: settings.py  settings_manager.py
src/utils/: castom_exceptions.py  data_repository.py  event_type.py  format_reporting.py  json_deserialization.py  nomenclature_service.py  observe_service.py  recipe_manager.py  recipe_service.py  (+4 more)
test/: test_crud_nomenclature.py  test_deserialization.py  test_filter.py  test_models.py  test_reports.py  test_repository_manager.py  test_settings.py  test_start.py  test_warehouse.py
(+20 files in other folders)
