[tool.poetry]
name = "design-patterns"
version = "0.1.0"
description = ""
authors = ["Ekaterina <108530800+piccolo-gatto@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
connexion = {extras = ["swagger-ui"], version = "^3.1.0"}
dict2xml = "^1.7.6"
flask-restplus = "^0.13.0"
flask = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
